# ai_autodoc

./: README.md  docker-compose.yml  pyproject.toml
configs/: registered_configs.yaml
scripts/: start_api.sh  start_dev.sh  start_ngrok.sh  start_ollama.sh  start_redis.sh  start_workers.sh  test_iterm.sh
skills/file_review/: SKILL.md
src/autodoc/: constants.py
src/autodoc/agents/: code_improvement_agent.py
src/autodoc/api/: app.py  webhook_router.py
src/autodoc/config/: config_loader.py  runtime_config.py
src/autodoc/datamodels/: file_review_task.py  repo_config.py
src/autodoc/events/: __init__.py  code_improvement_generated_event.py  event.py  event_factory.py  github_push_event.py
src/autodoc/git/: file_writer.py  git_commit.py  git_manager.py  git_push.py  repository_sync.py  worktree_manager.py
src/autodoc/github/: github_client.py  pr_manager.py
src/autodoc/llm/: improvement_generator.py  llm_client.py  prompt_builder.py
src/autodoc/queue/: queue_names.py  redis_task_queue.py  task_queue.py
src/autodoc/repositories/: repository_registry.py
src/autodoc/review/: change_validator.py  file_loader.py  file_review_task_builder.py  review_branch.py
src/autodoc/scratch/: test_env.py  test_github.py  test_push.py
src/autodoc/skills/: skill_loader.py
src/autodoc/worker/: pr_worker.py  review_worker.py  start_worker.py
