[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-autodoc"
version = "0.1.0"
description = "AI-powered autonomous code improvement system"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
"fastapi",
"uvicorn",
"redis",
"watchdog",
"httpx",
"GitPython"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
